# CoreInject

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
CLI/: CMakeLists.txt
CLI/Include/: CoreCLI.hpp
CLI/Source/: CoreCLI.cpp
Include/: CoreInject.hpp
NeedsRoot/: CMakeLists.txt
NeedsRoot/Include/CoreInject/: NeedsRoot.hpp
NeedsRoot/Source/: NeedsRoot.cpp
Settings/: CMakeLists.txt
Settings/Include/CoreInject/: Settings.hpp
Source/: CoreInject.cpp  ElfFile.cpp  ElfFile.hpp  GDBProcess.cpp  GDBProcess.hpp  Process.cpp  Process.hpp
